# web-tools

.github/workflows/: masstimes.yml  metals.yml
masstimes/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
masstimes/src/masstimes/: main.py
masstimes/src/masstimes/routers/: home.py
masstimes/src/masstimes/static/css/: styles.css
masstimes/src/masstimes/templates/: home.html.jinja
masstimes/src/masstimes/templates/layouts/: default.html.jinja
metals/: .dockerignore  .env  .env.template  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
metals/migrations/: env.py
metals/migrations/versions/: 908f022d3547_add_metal_prices_table.py  93d46706f3c2_setup_tables.py  c1a98996ca56_setup_tables.py
metals/src/: __init__.py
metals/src/metals/: env.py  main.py
metals/src/metals.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
metals/src/metals/internal/: config.py  lifespan.py  models.py  portfolio_calculations.py  price_cache.py  price_service.py  prices.py  repo.py  types.py
metals/src/metals/internal/persistency/: db.py  models.py  queries.py
metals/src/metals/routers/: holdings.py  home.py  portfolios.py  shared.py  types.py
metals/src/metals/static/css/: custom.css
metals/src/metals/static/js/: dev-tools.js  portfolio.js
metals/src/metals/templates/: 404.html.jinja2  index.html  layout.html.jinja2
metals/src/metals/templates/holdings/: edit.html.jinja2  new.html.jinja2
metals/src/metals/templates/home/: index.html.jinja2
metals/src/metals/templates/portfolios/: show.html.jinja2
metals/tests/: conftest.py
metals/tests/integration/: test_holdings.py  test_home.py  test_portfolios.py
