[project]
name = "metals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Paling", email = "christian.paling@googlemail.com" }
]
requires-python = ">=3.14.0"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]

[tool.mypy]
strict = true

[tool.ruff]
lint.select = ["E", "F", "I"]

