[project]
name = "metals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Paling", email = "christian.paling@googlemail.com" }
]
requires-python = ">=3.14.0"
dependencies = [
    "alembic>=1.17.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.11",
]

[tool.mypy]
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
lint.select = ["E", "F", "I"]
exclude = ["migrations"]

